Make list example

--- a/src/App.css
+++ b/src/App.css
@@ -6,12 +6,24 @@
 
 main {
   flex-grow: 1;
-  display: flex;
-  flex-wrap: wrap;
   padding: 2rem 4rem;
+}
+
+.catContent {
+  display: flex;
+}
+
+.galleryView {
+  height: 100vh;
+  flex-flow: column wrap;
   gap: 1rem;
-  min-height: 100%;
   align-content: flex-start;
+}
+
+.listView {
+  flex-direction: column;
+  gap: 1rem;
+  container: cat-list / size;
 }
 
 fieldset {
@@ -22,25 +34,28 @@ fieldset {
   flex-direction: column;
 }
 
-aside {
+.options {
   position: relative;
   background-color: #282a3e;
-  max-width: 24rem;
-  width: 25vw;
   border-top-right-radius: 1rem;
   border-bottom-right-radius: 1rem;
-  transition: max-width 200ms;
+  transition: min-width 200ms;
   accent-color: #ff84e8;
 
-  & > button {
+  & .draggable {
     position: absolute;
     top: 2rem;
     right: 0;
+    width: 4rem;
+    height: 4rem;
+    display: grid;
+    place-items: center;
+    font-size: 2rem;
+    cursor: ew-resize;
     transform: translate(50%);
     background-color: #ff84e8;
     color: #181925;
-    border-radius: 100%;
-    aspect-ratio: 1;
+    border-radius: 999px;
     z-index: 1;
   }
 
@@ -54,9 +69,7 @@ aside {
   }
 }
 
-aside.closed {
-  max-width: 2rem;
-
+.options.closed {
   & > div {
     opacity: 0;
     transition: opacity 100ms;
