--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,8 @@
+@view-transition {
+  navigation: auto;
+  types: slide, forwards;
+}
+
 #root {
   margin: 0;
   display: flex;
@@ -41,6 +46,8 @@ fieldset {
   border-bottom-right-radius: 1rem;
   transition: min-width 200ms;
   accent-color: #ff84e8;
+  display: flex;
+  flex-direction: column;
 
   & .draggable {
     position: absolute;
@@ -66,6 +73,19 @@ fieldset {
     opacity: 1;
     transition: opacity 200ms 100ms;
     gap: 2rem;
+  }
+}
+
+.expander {
+  flex-grow: 1;
+}
+
+.navigation a {
+  color: #ff84e8;
+
+  &:hover {
+    text-decoration: underline;
+    color: #ff84e8;
   }
 }
 
