--- a/dropdown.css
+++ b/dropdown.css
@@ -10,6 +10,8 @@
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+
+  interpolate-size: allow-keywords;
 }
 
 a {
@@ -150,7 +152,7 @@ h1 {
 }
 
 .details.open {
-  height: calc-size(auto);
+  height: auto;
 }
 
 .accordion {
